# type-friend

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GUIDANCE.md  devscripts.sh  docker-compose.dev.yml  docker-compose.yml  nginx_example.conf  nginx_example.template.conf  pyproject.toml  pytest.ini  readme.md  redeploy.sh  requirements-test.txt  requirements.txt
.ag_docs/conf/: aider.conf.yml
.ag_docs/guide/: ARCHITECTURE.md  GUIDANCE.md
.ag_docs/spec/: add-about.md  devscript-erase-ip.md  override-404.md
app/: database.py  db_utils.py  key_buffer_manager.py  main.py  models.py  state_persistence.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: 404.html  index.html  mines.html
app/templates/partials/: footer.html  meta_tags.html
docs/venv-confs/: Dockerfile  requirements-test.txt
templates/: index.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_endpoints.py  test_db_persistence.py
tests/ui/: test_404_page.py  test_initial_page_load.py
tests/unit/: __init__.py  test_db_utils.py  test_key_buffer_manager.py  test_persistence.py  test_state_persistence.py
