[project]
name = "t3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "jinja2==3.1.6",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.24.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-playwright>=0.7.0",
]
